Set width of Text Message to prevent Overflow

--- a/client/styles/chatRoom.styl
+++ b/client/styles/chatRoom.styl
@@ -22,6 +22,7 @@ input
   top 30px
   left 20px
 .messages .messagesText
+  font-size small
   background-color #FFF
   border-radius 10px
   min-width 300px
@@ -89,7 +90,10 @@ input
 .selected
   background-color #3083D6
   padding 5px
-  
+.messageUserName
+  color #3083D6
+.messages
+  width 300px
 
 
 
